--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "angular-cli-heroku-boilerplate",
   "version": "0.0.0",
   "license": "MIT",
+  "engines": {
+    "node": "8.11.2"
+  },
   "scripts": {
     "ng": "ng",
     "start": "node server.js",
