--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "license": "MIT",
   "engines": {
-    "node": "8.11.2"
+    "node": "8.11.2",
+    "npm": "5.6.0"
   },
   "scripts": {
     "ng": "ng",
